fix(styles): grid not appearing on Safari
Thanks @ximenavf92 for testing this and finding this solution for me!

--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -100,7 +100,6 @@ ul {
 */
 #background {
   overflow: hidden;
-  position: relative;
 }
 
 #background::before {
